--- a/package.json
+++ b/package.json
@@ -11,32 +11,32 @@
   "dependencies": {
     "buefy": "0.9.4",
     "core-js": "3.8.3",
-    "highlight.js": "10.5.0",
+    "highlight.js": "10.6.0",
     "vue": "2.6.12",
     "vue-class-component": "7.2.6",
     "vue-property-decorator": "9.1.2"
   },
   "devDependencies": {
-    "@types/chai": "4.2.14",
-    "@types/highlight.js": "9.12.4",
-    "@types/highlightjs": "9.12.0",
+    "@types/chai": "4.2.15",
+    "@types/highlight.js": "10.1.0",
+    "@types/highlightjs": "10.1.0",
     "@types/mocha": "8.2.0",
-    "@typescript-eslint/eslint-plugin": "3.10.1",
-    "@typescript-eslint/parser": "3.10.1",
+    "@typescript-eslint/eslint-plugin": "4.15.0",
+    "@typescript-eslint/parser": "4.15.0",
     "@vue/cli-plugin-babel": "4.5.11",
     "@vue/cli-plugin-eslint": "4.5.11",
     "@vue/cli-plugin-typescript": "4.5.11",
-    "@vue/cli-plugin-unit-jest": "4.5.11",
+    "@vue/cli-plugin-unit-jest": "^3.12.1",
     "@vue/cli-service": "4.5.11",
     "@vue/eslint-config-prettier": "6.0.0",
-    "@vue/eslint-config-typescript": "5.1.0",
-    "@vue/test-utils": "1.1.2",
-    "chai": "4.2.0",
+    "@vue/eslint-config-typescript": "7.0.0",
+    "@vue/test-utils": "1.1.3",
+    "chai": "4.3.0",
     "eslint": "7.19.0",
     "eslint-plugin-prettier": "3.3.1",
-    "eslint-plugin-vue": "6.2.2",
+    "eslint-plugin-vue": "7.5.0",
     "prettier": "2.2.1",
-    "typescript": "3.9.7",
+    "typescript": "4.1.5",
     "vue-template-compiler": "2.6.12"
   }
 }
